# ai-accelerators-course

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
tasks/01-softmax-cpu/example/: CMakeLists.txt  main.cpp
tasks/02-softmax-cuda/example/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/example/: CMakeLists.txt  main.cu
tasks/04-softmax-ascend/example/: CMakeLists.txt  main.cpp  softmax_kernel.cpp  softmax_kernel.h
tasks/common/: utils.h
